--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@rails/webpacker": "4.2.2",
     "bootstrap": "^4.4.1",
     "jquery": "~3.4.1",
-    "poppers": "^0.1.2",
+    "popper.js": "^1.16.1",
     "trix": "^1.0.0",
     "turbolinks": "^5.2.0"
   },
